 * Improved HW SPI for SH1106 and SSD1306 displays
 * Fixed issue with missing fonts
2016-08-21	v2.4.1	olikraus@gmail.com
 * Fixed HW SPI Modes (issue 52)
2016-10-01	v2.5.2	 olikraus@gmail.com
 * Added crox fonts (issue 57)
 * Support for RA8835 (issue 45)
 * Added support for SSD1322 and SSD1325
 * Added DrawXBMP (AVR: Assume bitmap in PROGMEM)
 * Added japanese fonts (issue 65)
2016-11-13	v2.6.3	 olikraus@gmail.com
 * Added support for UC1610 (EA DOGXL160)
 * Use Wire.setClock() for improved HW I2C performance (issue 79). This
    requires Arduino IDE 1.6.0 or higher.
 * Added Thai Fonts (issue 73)
 * Added support for "\n" in the print function for u8x8 (issue 74)
 * Screen mirror option for U8g2 (issue 76)
 * Added support for second wire interface (Constructor postfix 2ND_HW_I2C)
 * Added support for UC1611 (EA DOGM240 and EA DOGXL240, issue 66)
2016-11-28	v2.7.5	 olikraus@gmail.com
  * Added support for 0.66" 64x48 SSD1306 OLED (issue 89)
  * Support for UC1608 (issue 92)
  * Speed improvements for SW SPI und 8080 mode (issues 87, 90 and 95)
  * Fixed issue with ST7920 not using the optimized SW SPI procedures (issue 87)
  * Direct buffer API (issue 93)
2016-12-11	v2.8.4	 olikraus@gmail.com
  * Increased contrast range for SSD1306 (issue 98)
  * Support for KS0108 (issue 88)
  * Support for UC1608 240x128 (issue 101)
  * Speed improvement (issue 96)
2016-12-12	v2.8.5	 olikraus@gmail.com
  * Bugfix for issue 96 (issue 106)
2016-12-20	v2.9.1	 olikraus@gmail.com
  * Speed improvement for AVR/KS0108 (issue 104)
  * Support for UC1604 (issue 111)
  * Support for PCD8544/Nokia Display (issue 107)
  * Change/fixed behavior of userInterfaceSelectionList (issue 112)
2016-12-23	v2.9.2	 olikraus@gmail.com
  * Reverted the setup for SSD1306_NONAME to the original setup (undo issue 98)
  * Introduced SSD1306_VCOMH0 for the max range setup (issue 116)
2016-12-xx	v2.10.x	 olikraus@gmail.com
  * ST7565 LM6059 Display (issue 123)
  * SSD1606 eInk/ePaper Display (issue 100)