@@ -77,3 +77,5 @@ https://github.com/olikraus/u8g2 ChangeLog
 2016-12-xx	v2.10.x	 olikraus@gmail.com
   * ST7565 LM6059 Display (issue 123)
   * SSD1606 eInk/ePaper Display (issue 100)
+  * Documentation updates
+  
